--- a/src/PerfCoun.Console/PerfCoun.Console.csproj
+++ b/src/PerfCoun.Console/PerfCoun.Console.csproj
@@ -43,7 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CounterSensor.cs" />
+    <Compile Include="Sensor.cs" />
+    <Compile Include="PerformanceCounterHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
