--- a/src/CountersHub/CountersHub.csproj
+++ b/src/CountersHub/CountersHub.csproj
@@ -49,6 +49,11 @@
   <ItemGroup>
     <Compile Include="PerformanceCounterHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="SensorObservers\ConsoleObserver.cs" />
     <Compile Include="SensorObservers\ISensorObserver.cs" />
     <Compile Include="SensorObservers\TelegrafObserver.cs" />
@@ -56,7 +61,12 @@
     <Compile Include="Sensors\Sensor.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
