--- a/src/Palantir.Console/Palantir.Console.csproj
+++ b/src/Palantir.Console/Palantir.Console.csproj
@@ -56,9 +56,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CountersHub\CountersHub.csproj">
+    <ProjectReference Include="..\Palantir\Palantir.csproj">
       <Project>{a39bfcf8-dbe0-4a07-8cc3-3ffbb6c7e937}</Project>
-      <Name>CountersHub</Name>
+      <Name>Palantir</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
