--- a/src/Palantir/app.config
+++ b/src/Palantir/app.config
@@ -2,11 +2,11 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="CountersHub.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="Palantir.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
-        <CountersHub.Properties.Settings>
+        <Palantir.Properties.Settings>
             <setting name="TelegrafEnv" serializeAs="String">
                 <value>environemnt</value>
             </setting>
@@ -22,6 +22,6 @@
             <setting name="TelegrafStatisticsPort" serializeAs="String">
                 <value>8125</value>
             </setting>
-        </CountersHub.Properties.Settings>
+        </Palantir.Properties.Settings>
     </userSettings>
 </configuration>
