--- a/src/Palantiri/app.config
+++ b/src/Palantiri/app.config
@@ -1,27 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Palantiri.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <userSettings>
-        <Palantiri.Properties.Settings>
-            <setting name="TelegrafEnv" serializeAs="String">
-                <value>environemnt</value>
-            </setting>
-            <setting name="TelegrafSysName" serializeAs="String">
-                <value>sysName</value>
-            </setting>
-            <setting name="TelegrafId" serializeAs="String">
-                <value>id</value>
-            </setting>
-            <setting name="TalagrafStatisticsServer" serializeAs="String">
-                <value>127.0.0.1</value>
-            </setting>
-            <setting name="TelegrafStatisticsPort" serializeAs="String">
-                <value>8125</value>
-            </setting>
-        </Palantiri.Properties.Settings>
-    </userSettings>
+	<configSections>
+		<sectionGroup name="userSettings"
+		              type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="Palantiri.Properties.Settings"
+			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+			         allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+		</sectionGroup>
+	</configSections>
+	<userSettings>
+		<Palantiri.Properties.Settings>
+			<setting name="TelegrafEnv" serializeAs="String">
+				<value>environemnt</value>
+			</setting>
+			<setting name="TelegrafSysName" serializeAs="String">
+				<value>sysName</value>
+			</setting>
+			<setting name="TelegrafId" serializeAs="String">
+				<value>id</value>
+			</setting>
+			<setting name="TalagrafStatisticsServer" serializeAs="String">
+				<value>127.0.0.1</value>
+			</setting>
+			<setting name="TelegrafStatisticsPort" serializeAs="String">
+				<value>8125</value>
+			</setting>
+		</Palantiri.Properties.Settings>
+	</userSettings>
 </configuration>
