--- a/src/Palantiri/Palantiri.csproj
+++ b/src/Palantiri/Palantiri.csproj
@@ -54,6 +54,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="SensorObservers\FileObserver.cs" />
     <Compile Include="SensorObservers\ConsoleObserver.cs" />
     <Compile Include="SensorObservers\ISensorObserver.cs" />
     <Compile Include="SensorObservers\TelegrafObserver.cs" />
