--- a/src/Palantiri.Console/packages.config
+++ b/src/Palantiri.Console/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
-  <package id="PowerArgs" version="2.7.1.0" targetFramework="net46" />
+	<package id="PowerArgs" version="2.7.1.0" targetFramework="net46" />
+	<package id="Serilog" version="1.5.14" targetFramework="net451" />
 </packages>
