--- a/src/Palantiri/packages.config
+++ b/src/Palantiri/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
-  <package id="Telegraf" version="2.0.0" targetFramework="net45" />
+	<package id="Serilog" version="1.5.14" targetFramework="net451" />
+	<package id="Telegraf" version="2.0.0" targetFramework="net45" />
 </packages>
