--- a/src/Palantiri.Console/App.config
+++ b/src/Palantiri.Console/App.config
@@ -4,4 +4,16 @@
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
 	</startup>
+	<appSettings>
+		<!--<add key="serilog:minimum-level" value="Verbose" />-->
+		<add key="serilog:minimum-level" value="Debug" />
+		<!--<add key="serilog:minimum-level" value="Information" />-->
+		<!--<add key="serilog:minimum-level" value="Warning" />-->
+		<!--<add key="serilog:minimum-level" value="Error" />-->
+		<!--<add key="serilog:minimum-level" value="Fatal" />-->
+		
+		<!--<add key="serilog:write-to:ColoredConsole" />-->
+		<add key="serilog:write-to:RollingFile.pathFormat" value="log-{Date}.log" />
+		<add key="serilog:write-to:RollingFile.retainedFileCountLimit" value="10" />
+	</appSettings>
 </configuration>
