--- a/src/Palantiri.Console/Palantiri.Console.csproj
+++ b/src/Palantiri.Console/Palantiri.Console.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Arguments\Parameters\Counter.cs" />
     <Compile Include="Arguments\Parameters\JsonModels\Destination.cs" />
     <Compile Include="Arguments\Parameters\JsonModels\JsonFile.cs" />
-    <Compile Include="Arguments\Parameters\StartParameters.cs" />
+    <Compile Include="Arguments\Parameters\CreateSensorAndStartParameters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
