--- a/src/Palantiri.Console/Palantiri.Console.csproj
+++ b/src/Palantiri.Console/Palantiri.Console.csproj
@@ -64,6 +64,8 @@
   <ItemGroup>
     <Compile Include="Arguments\ConsoleCommands.cs" />
     <Compile Include="Arguments\Parameters\Counter.cs" />
+    <Compile Include="Arguments\Parameters\StopParameters.cs" />
+    <Compile Include="Arguments\Parameters\StartParameters.cs" />
     <Compile Include="Arguments\Parameters\JsonModels\Destination.cs" />
     <Compile Include="Arguments\Parameters\JsonModels\JsonFile.cs" />
     <Compile Include="Arguments\Parameters\CreateSensorAndStartParameters.cs" />
