--- a/src/Palantiri.Console/App.config
+++ b/src/Palantiri.Console/App.config
@@ -7,6 +7,7 @@
 	<appSettings>
 		<!--<add key="serilog:minimum-level" value="Verbose" />-->
 		<add key="serilog:minimum-level" value="Debug" />
+		<!--<add key="serilog:minimum-level" value="updatetrigger" />-->
 		<!--<add key="serilog:minimum-level" value="Information" />-->
 		<!--<add key="serilog:minimum-level" value="Warning" />-->
 		<!--<add key="serilog:minimum-level" value="Error" />-->
