--- a/Palantiri.Core/Palantiri.Core.fsproj
+++ b/Palantiri.Core/Palantiri.Core.fsproj
@@ -45,8 +45,9 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Counters.fs" />
-    <Compile Include="Sensor.fs" />
     <None Include="Script.fsx" />
+    <Compile Include="Sensor.fs" />
+    <Compile Include="SensorObservable.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
