--- a/src/Palantiri.Console/packages.config
+++ b/src/Palantiri.Console/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
+  <package id="FSharp.Compiler.Service" version="2.0.0.6" targetFramework="net451" />
+  <package id="FSharp.Formatting" version="2.14.4" targetFramework="net451" />
+  <package id="FSharpVSPowerTools.Core" version="2.3.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="PowerArgs" version="2.7.1.0" targetFramework="net46" />
   <package id="Serilog" version="1.5.14" targetFramework="net451" />
