--- a/src/Palantiri.ConsoleF/Palantiri.ConsoleF.fsproj
+++ b/src/Palantiri.ConsoleF/Palantiri.ConsoleF.fsproj
@@ -50,6 +50,18 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
+    <None Include="..\Shared\parameters.json">
+      <Link>parameters.json</Link>
+    </None>
+    <None Include="..\Shared\parameters-ru.json">
+      <Link>parameters-ru.json</Link>
+    </None>
+    <None Include="..\Shared\start-many-counters-en.bat">
+      <Link>start-many-counters-en.bat</Link>
+    </None>
+    <None Include="..\Shared\start-many-counters-ru.bat">
+      <Link>start-many-counters-ru.bat</Link>
+    </None>
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
