packages updated for console f

--- a/src/Palantiri.ConsoleF/Palantiri.ConsoleF.fsproj
+++ b/src/Palantiri.ConsoleF/Palantiri.ConsoleF.fsproj
@@ -37,32 +37,6 @@
     <DocumentationFile>bin\Release\Palantiri.ConsoleF.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Program.fs" />
-    <None Include="App.config" />
-    <None Include="..\Shared\parameters.json">
-      <Link>parameters.json</Link>
-    </None>
-    <None Include="..\Shared\parameters-ru.json">
-      <Link>parameters-ru.json</Link>
-    </None>
-    <None Include="..\Shared\start-many-counters-en.bat">
-      <Link>start-many-counters-en.bat</Link>
-    </None>
-    <None Include="..\Shared\start-many-counters-ru.bat">
-      <Link>start-many-counters-ru.bat</Link>
-    </None>
-  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
@@ -79,6 +53,45 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
+  <ItemGroup>
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Program.fs" />
+    <None Include="App.config" />
+    <None Include="..\Shared\parameters.json">
+      <Link>parameters.json</Link>
+    </None>
+    <None Include="..\Shared\parameters-ru.json">
+      <Link>parameters-ru.json</Link>
+    </None>
+    <None Include="..\Shared\start-many-counters-en.bat">
+      <Link>start-many-counters-en.bat</Link>
+    </None>
+    <None Include="..\Shared\start-many-counters-ru.bat">
+      <Link>start-many-counters-ru.bat</Link>
+    </None>
+    <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="mscorlib" />
+    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PowerArgs">
+      <HintPath>..\..\packages\PowerArgs.2.7.1.0\lib\net45\PowerArgs.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Serilog">
+      <HintPath>..\..\packages\Serilog.1.5.14\lib\net45\Serilog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Serilog.FullNetFx">
+      <HintPath>..\..\packages\Serilog.1.5.14\lib\net45\Serilog.FullNetFx.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+  </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
