--- a/src/Palantiri.Core/Palantiri.Core.fsproj
+++ b/src/Palantiri.Core/Palantiri.Core.fsproj
@@ -60,6 +60,7 @@
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
     <Content Include="Readme.txt" />
+    <Compile Include="SensorManager.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
