--- a/src/Palantiri.ConsoleF/Palantiri.ConsoleF.fsproj
+++ b/src/Palantiri.ConsoleF/Palantiri.ConsoleF.fsproj
@@ -25,6 +25,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DocumentationFile>bin\Debug\Palantiri.ConsoleF.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
+    <StartArguments>CreateSensorAndStart -p parameters-ru.json</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
