--- a/src/Palantiri.ConsoleF/Palantiri.ConsoleF.fsproj
+++ b/src/Palantiri.ConsoleF/Palantiri.ConsoleF.fsproj
@@ -9,10 +9,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Palantiri.ConsoleF</RootNamespace>
     <AssemblyName>Palantiri.ConsoleF</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
     <Name>Palantiri.ConsoleF</Name>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -61,9 +62,11 @@
     <None Include="App.config" />
     <None Include="..\Shared\parameters.json">
       <Link>parameters.json</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="..\Shared\parameters-ru.json">
       <Link>parameters-ru.json</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="..\Shared\start-many-counters-en.bat">
       <Link>start-many-counters-en.bat</Link>
