--- a/src/Palantiri.Console/Palantiri.Console.csproj
+++ b/src/Palantiri.Console/Palantiri.Console.csproj
@@ -62,6 +62,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Global\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Arguments\ConsoleCommands.cs" />
     <Compile Include="Arguments\Parameters\Counter.cs" />
     <Compile Include="Arguments\Parameters\StopParameters.cs" />
